--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.8.1
-Django==5.1
-djangorestframework==3.15.2
+Django==3.2.3
 pillow==10.4.0
 sqlparse==0.5.1
 tzdata==2024.1
+djangorestframework==3.12.4
+djoser==2.1.0
