--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,28 @@
 asgiref==3.8.1
-Django==3.2.3
+certifi==2024.7.4
+cffi==1.17.0
+charset-normalizer==3.3.2
+cryptography==43.0.0
+defusedxml==0.8.0rc2
+Django==5.1
+django-filter==23.1
+django-templated-mail==1.1.1
+djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.1
+djoser==2.2.3
+drf-extra-fields==3.5.0
+filetype==1.2.0
+idna==3.7
+isort==5.13.2
+oauthlib==3.2.2
 pillow==10.4.0
+pycparser==2.22
+PyJWT==2.9.0
+python3-openid==3.2.0
+requests==2.32.3
+requests-oauthlib==2.0.0
+social-auth-app-django==5.4.2
+social-auth-core==4.5.4
 sqlparse==0.5.1
 tzdata==2024.1
-djangorestframework==3.12.4
-djoser==2.1.0
+urllib3==2.2.2
