--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,32 +43,30 @@ jobs:
         python -m flake8 backend/
         cd backend/
         python manage.py test
-  # build_and_push_to_docker_hub:
-  #   runs-on: ubuntu-latest
-  #   needs: tests
-  #   steps:
-  #     - name: Check out the repo
-  #       # Получение исходного кода из репозитория
-  #       uses: actions/checkout@v3
-  #     - name: Set up Docker Buildx
-  #       # Установка сборщика контейнеров Docker
-  #       uses: docker/setup-buildx-action@v2
-  #     - name: Login to Docker 
-  #       # Авторизация на Docker Hub
-  #       uses: docker/login-action@v2
-  #       # При помощи with передаём в action параметры username и password
-  #       with:
-  #         username: ${{ secrets.DOCKER_USERNAME }}
-  #         password: ${{ secrets.DOCKER_PASSWORD }}
-  #         # Хорошо ли держать логин и пароль прямо в коде workflow?
-  #         # Нет, это нехорошо
-  #     - name: Push to DockerHub
-  #       # Одновременный билд и пуш образа в Docker Hub
-  #       uses: docker/build-push-action@v4
-  #       with:
-  #         context: ./backend/
-  #         push: true
-  #         tags: pitbul892/foodgram_backend:latest 
+  build_and_push_to_docker_hub:
+    runs-on: ubuntu-latest
+    needs: tests
+    steps:
+      - name: Check out the repo
+        # Получение исходного кода из репозитория
+        uses: actions/checkout@v3
+      - name: Set up Docker Buildx
+        # Установка сборщика контейнеров Docker
+        uses: docker/setup-buildx-action@v2
+      - name: Login to Docker 
+        # Авторизация на Docker Hub
+        uses: docker/login-action@v2
+        # При помощи with передаём в action параметры username и password
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to DockerHub
+        # Одновременный билд и пуш образа в Docker Hub
+        uses: docker/build-push-action@v4
+        with:
+          context: ./backend/
+          push: true
+          tags: pitbul892/foodgram_backend:latest 
   # frontend_tests:
   #   runs-on: ubuntu-latest
 
