--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,11 +83,6 @@ jobs:
         cd frontend/
         npm install --legacy-peer-deps
 
-    # - name: Test frontend
-    #   # Запускаем тесты
-    #   run: |
-    #     cd frontend/
-    #     npm run test
   build_frontend_and_push_to_docker_hub:
     name: Push frontend Docker image to DockerHub
     runs-on: ubuntu-latest
@@ -108,25 +103,25 @@ jobs:
           context: ./frontend/
           push: true
           tags: pitbul892/foodgram_frontend:latest
-  # build_gateway_and_push_to_docker_hub:
-  #   name: Push gateway Docker image to DockerHub
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Check out the repo
-  #       uses: actions/checkout@v3
-  #     - name: Set up Docker Buildx
-  #       uses: docker/setup-buildx-action@v2
-  #     - name: Login to Docker 
-  #       uses: docker/login-action@v2
-  #       with:
-  #         username: ${{ secrets.DOCKER_USERNAME }}
-  #         password: ${{ secrets.DOCKER_PASSWORD }}
-  #     - name: Push to DockerHub
-  #       uses: docker/build-push-action@v4
-  #       with:
-  #         context: ./nginx/
-  #         push: true
-  #         tags: pitbul892/foodgram_nginx:latest 
+  build_gateway_and_push_to_docker_hub:
+    name: Push gateway Docker image to DockerHub
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to Docker 
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to DockerHub
+        uses: docker/build-push-action@v4
+        with:
+          context: ./nginx/
+          push: true
+          tags: pitbul892/foodgram_nginx:latest 
   # deploy:
   #   runs-on: ubuntu-latest
   #   needs: 
